--- a/index.html
+++ b/index.html
@@ -68,15 +68,16 @@
 <main style="padding-top:1vh; background-color:#f6f6f6; text-align: justify;">
 <div class="container">
     <div class="row">
+        <span class="cvheading" style="margin-top:0%">Introduction</span><br>
         <p style="margin-bottom: 1rem;">Australian freelance civil/structural engineer 
             with extensive experience. Based in Spain with availability for either short or long-term assignments.  With particular interest in:<br>
-            > Management of tender and detailed design document preparation; drawings, specifications etc.;<br>
+            > Project Management of tender and detailed design document preparation; drawings, specifications etc.;<br>
             > Representation of consultant at design/site/project management meetings;<br>
             > Assessment and evaluation of claims to establish responsibility, 
             cause, effect and damage, to assist in mediation.
             </p>
-            <hr>
-    </div>
+        </div>
+        <hr>
     <div class="row">
       <div class="col-sm">
         <span class="cvheading" style="margin-top:0%">Profile</span><br>
@@ -96,7 +97,7 @@
             </p>
             <div class="container-fluid p-0" style="float:left">
                 <span class="cvheading">Profession</span> 
-                <p>Structural/Civil Engineer</p>
+                <p>Structural/Civil Engineer.</p>
                 <span class="cvheading">Qualifications</span>
                 <p>BE (Civil) University of Melbourne, 1982.</p>
             </div>
