--- a/indice.html
+++ b/indice.html
@@ -13,7 +13,7 @@
     <link href="static/favicon.ico" rel="icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="static/styles.css">
-
+    <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -63,86 +63,107 @@
           <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
         </a>
     </nav>
-    <main style="padding-top:1vh; background-color:#f6f6f6;">
-        <h3 class="noScreen">CV Richard Hart</h3>
-        <div class="container p-2">
-            <div class="column">
-                <span class="cvheading">Perfil</span><br>
+<main style="padding-top:1vh; background-color:#f6f6f6; text-align: justify;">
+<div class="container">
+    <div class="row">
+        <span class="cvheading" style="margin-top:0%">Introducción</span><br>
+        <p style="margin-bottom: 1rem;">
+            Ingeniero civil/estructural australiano. Autónomo residente en España con disponibilidad de 
+            incorporarse en proyectos u obras de corta o larga duración. Particularmente interesado en:<br>
+            > Gestión del proyecto para el desarroyo de los documentos de diseño ; planos, especificaciones etc. para las ofertas y diseño final;<br>
+            > Representante de consultante en reuniones de diseño, obra o project management;<br>
+            > Evaluación técnica de reclamaciones para establecer responsabilidad, causa, 
+            efecto y daños y mediación de conflictos.
+            </p>
+        </div>
+        <hr>
+    <div class="row">
+      <div class="col-sm">
+        <span class="cvheading" style="margin-top:0%">Perfil</span><br>
+            <div style="float:left; margin: 5px 5px 5px ">
                 <img
-                    title = "Richard Hart yesterday"      
+                    title = "Richard Hart"     
                     src="photos/rh_foto_trim.jpg"
-                    width="150px"
+                    width="110px"
                     alt="RH"
-                    
+                    class="img-thumbnail"
+                    margin= "5px"
                     />
-                    <p>Richard cuenta con casi 40 años de experiencia como ingeniero civil y estructural. 
-                        Su experiencia cubre tanto edificación como puentes en los últimos años. Ha trabajado en Australia, 
-                        Inglaterra y España donde reside.</p>
-                    </div>
-                    <div class="column">
-                        <span class="cvheading">Experiencia general</span>
-                        <p>Experiencia amplia en diseño, supervisión de obra, chequeos independientes y gestión de proyectos.<br>
-                           Diseño estructural en edificación utilizando hormigón armado, acero, madera y estructuras de fábrica.<br>
-                           Diseño de pavimiento y drenaje en urbanizaciones.<br>
-                           Estimación de cuantías, inspecciones y evaluación de edificios, informes, declaración de método y especificaciones etc.<br>
-                           Evaluación técnica de reclamaciones para establecer responsabilidad, causa, efecto y daños.
-                        </p>    
-                    </div>
-                    <div class="column">
-                    <span class="cvheading">Profesión</span> 
-                    <p>Ingeniero civil/estructural.</p>
-                    <span class="cvheading">Nacionalidad</span>
-                    <p>
-                        Australiana.<br>
-                    </p>
-                    <span class="cvheading">Formación académica</span>
-                    <p>
-                        BE (Civil) University of Melbourne, 1982.<br>
-                    </p>
-                    <span class="cvheading">Cursos en línea Universidad de Harvard</span>
-                    <p>
-                        CS50 Web <i>Web Programming with Python and JavaScript;</i><br>
-                        CS50 AI <i>Introduction to Artificial Intelligence  with Python;</i><br>
-                        CS50x <i>Introduction to Computer Science.</i>
-                    </p>
-                    <span class="cvheading">Colegios profesionales</span>
-                    <p>
-                        Socio corporativo Institution of Structural Engineers (MIStructE);<br>
-                        Socio graduado Institution of Civil Engineers (GMICE).
-                    </p>
-                </div>
-                <div class="row" style="padding-left:5px">
-                    <span class="cvheading">Experiencia 2006-actual</span>
-                    <span class="link">Evaluación de reclamaciones de contratistas</span>
-                    <p>Richard es el responsable de evaluar y defender varias reclamaciones de los contratistas 
-                    contra Eptisa. Una reclamación relacionada con Mersey Gateway Project fue resuelta 
-                    con éxito en la mediación y una reclamación sobre el N25 New Ross Bypass continúa.</p>
-
-                    <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a><br>
-                    <p><b>Vice Jefe de Proyecto Landside Structures.</b> Jefe de Proyecto para Eptisa cubriendo el 
-                        diseño de los muros de contención, drenaje, y geotecnia para el proyecto entero 
-                        incluyendo el puente principal, y de la subestructura del viaducto de Astmoor & Bridgewater. 
-                        Richard fue el responsable para la supervisión de la producción y sumisión de los planos y 
-                        informes, incluyendo el control de calidad. Asistió a las reuniones semanales de diseño 
-                        y a las reuniones mensuales de la Junta Directiva.</p>
-                    </div>
-                    <div class="row" style="padding-left:5px">
-                        <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
-                        <p><b>Jefe de Proyecto cheque CAT III.</b> Richard fue el responsable de la supervisión 
-                            del chequeo independiente categoría 3 incluyendo asistencia en las reuniones de 
-                            coordinación del cliente. </p>
-                        </div>
-                        <div class="row" style="padding-left:5px">
-                            <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
-                            <p><b>Gestión de la producción de los planos constructivos y representante del diseño 
-                                en obra</b> para el New Europe Bridge, antes conocido como el Danube Bridge 2 o el 
-                                Vidin-Calafat Bridge  (Bulgaria). Richard fue responsable para el desarrollo de 
-                                los planos de diseño a los planos de construcción. Incluido el Puente principal 
-                                y sus viaductos, el viaducto del ferrocarril y el drenaje. También fue el 
-                                representante en obra del diseño.</p>
-                            </div>
-                        </div>
-                    </div>
-                </main>
-            </body>
+            </div>
+            <p style="margin-left: 5px;">Casi 40 años de experiencia como ingeniero civil y de estructuras. 
+                El experiencia cubre tanto edificación como puentes en los últimos años. Trabajado en Australia, 
+                Inglaterra y España.
+            </p>
+            <div class="container-fluid p-0" style="float:left">
+                <span class="cvheading">Profesión </span> 
+                <p>Ingeniero civil/estructuras.</p>
+                <span class="cvheading">Formación académica</span>
+                <p>BE (Civil) University of Melbourne, 1982.</p>
+            </div>
+      </div>
+      <div class="col-sm">
+        <span class="cvheading">Experiencia</span>
+            <p>
+                > Experiencia amplia en diseño, supervisión de obra, chequeos independientes y gestión de proyectos.<br>
+                > Diseño estructural en edificación utilizando hormigón armado, acero, madera y estructuras de fábrica.<br>
+                > Diseño de pavimiento y drenaje en urbanizaciones.<br>
+                > Estimación de cuantías, inspecciones y evaluación de edificios, informes, declaración de método y especificaciones etc.<br>
+                > Evaluación técnica de reclamaciones para establecer responsabilidad, causa, efecto y daños.
+            </p>   
+      </div>
+      <div class="col-sm">
+        <span class="cvheading">Nacionalidad</span>
+        <p>Australiana.</p>
+        <span class="cvheading">Idiomas</span>
+        <p>Fluido en español.</p>
+        <span class="cvheading">Cursos en línea Universidad de Harvard</span>
+        <p>
+            CS50 Web: <i>Web Programming with Python and JavaScript;</i><br>
+            CS50 AI: <i>Introduction to Artificial Intelligence with Python;</i><br>
+            CS50x: <i>Introduction to Computer Science.</i><br>
+        </p>
+        <span class="cvheading">Colegios profesionales</span>
+        <p>
+            Socio corporativo Institution of Structural Engineers (MIStructE);<br>
+            Socio graduado Institution of Civil Engineers (GMICE).
+        </p>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+        <span class="cvheading">Experiencia 2006-actual</span>
+        <span class="link">Evaluación de reclamaciones de contratistas</span>
+            <p>Richard es el responsable de evaluar y defender varias reclamaciones de los contratistas 
+            contra Eptisa. Una reclamación relacionada con Mersey Gateway Project fue resuelta 
+            con éxito en la mediación y una reclamación sobre el N25 New Ross Bypass continúa.
+            </p>
+    </div>
+    <div class="row">
+        <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a><br>
+        <p><b>Vice Jefe de Proyecto Landside Structures.</b> Jefe de Proyecto para Eptisa cubriendo el 
+            diseño de los muros de contención, drenaje, y geotecnia para el proyecto entero 
+            incluyendo el puente principal, y de la subestructura del viaducto de Astmoor & Bridgewater. 
+            El responsable para la supervisión de la producción y sumisión de los planos y 
+            informes, incluyendo el control de calidad. Asistió a las reuniones semanales de diseño 
+            y a las reuniones mensuales de la Junta Directiva.
+        </p>
+    </div>
+    <div class="row">
+        <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
+        <p><b>Jefe de Proyecto cheque CAT III.</b> El responsable de la supervisión 
+        del chequeo independiente categoría 3 incluyendo asistencia en las reuniones de 
+        coordinación del cliente. </p>
+    </div>
+    <div class="row">
+        <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
+        <p><b>Gestión de la producción de los planos constructivos y representante del diseño 
+        en obra</b> para el New Europe Bridge, antes conocido como el Danube Bridge 2 o el 
+        Vidin-Calafat Bridge  (Bulgaria). El responsable para el desarrollo de 
+        los planos de diseño a los planos de construcción. Incluido el Puente Principal 
+        y sus viaductos, el viaducto del ferrocarril y el drenaje. También el 
+        representante en obra del diseño.</p>
+    </div>
+  </div>
+</main>
+</body>
 </html>
