--- a/email_esp.html
+++ b/email_esp.html
@@ -45,7 +45,7 @@
             </li>
             </ul>
         </div>
-        <a class="nav-link" href="index.html" role="button">
+        <a class="nav-link" href="email.html" role="button">
             <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
           </a>
     </nav>
