--- a/empleo.html
+++ b/empleo.html
@@ -57,13 +57,14 @@
             </li>
         </ul>
       </div>
-      <a class="nav-link" href="index.html" role="button">
+      <a class="nav-link" href="employment.html" role="button">
         <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
       </a>
   </nav>
-<span style="margin: 2vmin;" class="cvheading">Empleo</span><br>
+  <main style="padding-top:1vh">
+    <div class="container ">
+<span class="cvheading">Empleo</span><br>
 <table  style="width: fit-content" class="table table-hover">
-  
     <tbody>
       <tr>
         <td>desde sep-13</td>
@@ -168,4 +169,6 @@
       
     </tbody>
   </table>
+  </div>
+  </main>
 </body>
