--- a/employment.html
+++ b/employment.html
@@ -51,13 +51,14 @@
           </li>
         </ul>
       </div>
-      <a class="nav-link" href="indice.html" role="button">
+      <a class="nav-link" href="empleo.html" role="button">
           <img id = "home" src="static/bandera.png" alt="Flag" width="25px"/>
         </a>
   </nav>
-<span style="margin: 2vmin;" class="cvheading">Employment Record</span><br>
-<table  style="width: fit-content" class="table table-hover">
-  
+<main style="padding-top:1vh">
+  <div class="container ">
+  <span class="cvheading">Employment Record</span>
+  <table   class="table table-hover">
     <tbody>
       <tr>
         <td>Since Sep-13</td>
@@ -70,7 +71,7 @@
         <td>Jun 08- Jun 13</td>
         <td><b>FCC Construccion SA</b><br>
             Responsible for producing the Working Drawings and Design Site Representative for the Danube
-             Bridge 2 Project (Bulgaria). Contract value €235m.
+            Bridge 2 Project (Bulgaria). Contract value €235m.
             </td>
       </tr>
       <tr>
@@ -159,5 +160,7 @@
       
     </tbody>
   </table>
+  </div>
+</main>
 </body>
 </html>
