--- a/experiencia.html
+++ b/experiencia.html
@@ -18,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">  -->
     <title>Experiencia</title>
     <style> 
         @media print { 
@@ -57,13 +57,13 @@
             </li>
           </ul>
         </div>
-        <a class="nav-link" href="index.html" role="button">
+        <a class="nav-link" href="experience.html" role="button">
             <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
           </a>
             
     </nav>
-    <main style="padding-top:1vh; text-align: justify" >
-        <div class="w3-container">
+    <main style="padding-top:1vh">
+        <div class="container">
             <span class="cvheading">Experiencia</span>
         <hr>
         <span class="cvheading">EPTISA</span><br>
@@ -187,8 +187,8 @@
         <figcaption>Roebuck House, Palace St, Londres</figcaption>
     </figure>
 </div>
+</div>
 
-
-</main>
+    </main>
 </body>
     </html>
