--- a/academic.html
+++ b/academic.html
@@ -50,17 +50,17 @@
               </li>
           </ul>
         </div>
-        <a class="nav-link" href="indice.html" role="button">
+        <a class="nav-link" href="academica.html" role="button">
             <img id = "home"
                 src="static/bandera.png"
                 alt="Flag"
                 width="25px"/>
             </a>
-        </nav>
-        <span style="margin-left: 2vh;" class="cvheading">Degree and Certificates</span>
-        <hr>
+    </nav>
+    <span style="margin-left: 2vh;" class="cvheading">Degree and Certificates</span>
+    <hr>
     <main style="padding-top:1vh; text-align:center;">
-        <div class="container p-2">
+        <div class="container">
             <div class="column">
                 <figure>
                     <img src="degrees/degree.PNG" alt="Degree" style="width:90%">
