--- a/academica.html
+++ b/academica.html
@@ -27,7 +27,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color:#f6f6f6;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="indice.html">CV Richard Hart</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,14 +56,14 @@
             </li>
           </ul>
         </div>
-        <a class="nav-link" href="index.html" role="button">
+        <a class="nav-link" href="academic.html" role="button">
           <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
         </a>
         </nav>
         <span style="margin-left: 2vh;" class="cvheading">Grado y certificados</span>
           <hr>
     <main style="padding-top:1vh; text-align:center;">
-      <div class="container p-2">
+      <div class="container">
           <div class="column">
               <figure>
                   <img src="degrees/degree.PNG" alt="Degree" style="width:90%">
