--- a/email.html
+++ b/email.html
@@ -45,7 +45,7 @@
             </li>
             </ul>
         </div>
-        <a class="nav-link" href="indice.html" role="button">
+        <a class="nav-link" href="email_esp.html" role="button">
             <img id = "home"
                 src="static/bandera.png"
                 alt="Flag"
