--- a/experience.html
+++ b/experience.html
@@ -51,7 +51,7 @@
               </li>
           </ul>
         </div>
-        <a class="nav-link" href="indice.html" role="button">
+        <a class="nav-link" href="experiencia.html" role="button">
             <img id = "home"
                 src="static/bandera.png"
                 alt="Flag"
@@ -60,7 +60,6 @@
             
     </nav>
     <main style="padding-top:1vh">
-        <h3 class="noScreen">CV Richard Hart</h3>
         <div class="container ">
         <span class="cvheading">Experience</span>
         <hr>
@@ -195,6 +194,6 @@
 </div>
 
 
-</main>
+    </main>
 </body>
     </html>
