--- a/academica.html
+++ b/academica.html
@@ -64,7 +64,7 @@
           <hr>
     <main style="padding-top:1vh; text-align:center;">
       <div class="container">
-          <div class="column">
+          <div class="degree">
               <figure>
                   <img src="degrees/degree.PNG" alt="Degree" style="width:90%">
                   <figcaption>Grado Ingeniero Civil</figcaption>
