--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             />
         </a>
 </nav>
-<main style="padding-top:1vh; background-color:#f6f6f6; text-align: justify;">
+<main style="padding-top:1vh; background-color:#f6f6f6;">
 <div class="container">
     <div class="row">
         <span class="cvheading" style="margin-top:0%">Introduction</span><br>
