--- a/indice.html
+++ b/indice.html
@@ -63,7 +63,7 @@
           <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
         </a>
     </nav>
-<main style="padding-top:1vh; background-color:#f6f6f6; text-align: justify;">
+<main style="padding-top:1vh; background-color:#f6f6f6;">
 <div class="container">
     <div class="row">
         <span class="cvheading" style="margin-top:0%">Introducción</span><br>
