--- a/academic.html
+++ b/academic.html
@@ -28,58 +28,58 @@
     </style>
 </head>
 <body style="background-color:#f6f6f6;">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">CV Richard Hart</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">CV Richard Hart</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="employment.html">Employment Record</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="experience.html">Experience</a>
+        </li>
+        <li class="nav-item">
+            <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contact</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="employment.html">Employment Record</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="experience.html">Experience</a>
-            </li>
-            <li class="nav-item">
-                <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contact</a>
-              </li>
-          </ul>
+        </ul>
+    </div>
+    <a class="nav-link" href="academica.html" role="button">
+        <img id = "home"
+            src="static/bandera.png"
+            alt="Flag"
+            width="25px"/>
+        </a>
+</nav>
+<span style="margin-left: 2vh;" class="cvheading">Degree and Certificates</span>
+<hr>
+<main style="padding-top:1vh; text-align:center;">
+    <div class="container">
+        <div class="degree">
+            <figure>
+                <img src="degrees/degree.PNG" alt="Degree" style="width:90%">
+                <figcaption>Engineering degree</figcaption>
+                </figure>
+            <figure>
+                <img src="degrees/istructe.PNG" alt="Structures" style="width:90%">
+                <figcaption>Corporate membership IStructE</figcaption>
+                </figure>
+            <figure>
+                <img src="degrees/cs50x.PNG" alt="Structures" style="width:90%">
+                <figcaption>Introduction to computer Science</figcaption>
+                </figure>
+            <figure>
+                <img id="webcert" src="degrees/cs50w.jpg" alt="Structures" style="width:90%">
+                <figcaption>Web Programming</figcaption>
+                </figure>
         </div>
-        <a class="nav-link" href="academica.html" role="button">
-            <img id = "home"
-                src="static/bandera.png"
-                alt="Flag"
-                width="25px"/>
-            </a>
-    </nav>
-    <span style="margin-left: 2vh;" class="cvheading">Degree and Certificates</span>
-    <hr>
-    <main style="padding-top:1vh; text-align:center;">
-        <div class="container">
-            <div class="column">
-                <figure>
-                    <img src="degrees/degree.PNG" alt="Degree" style="width:90%">
-                    <figcaption>Engineering degree</figcaption>
-                    </figure>
-                <figure>
-                    <img src="degrees/istructe.PNG" alt="Structures" style="width:90%">
-                    <figcaption>Corporate membership IStructE</figcaption>
-                    </figure>
-                <figure>
-                    <img src="degrees/cs50x.PNG" alt="Structures" style="width:90%">
-                    <figcaption>Introduction to computer Science</figcaption>
-                    </figure>
-                <figure>
-                    <img id="webcert" src="degrees/cs50w.jpg" alt="Structures" style="width:90%">
-                    <figcaption>Web Programming</figcaption>
-                    </figure>
-            </div>
-        </div>
-    </main>
+    </div>
+</main>
 </body>
 </html>
