--- a/indice.html
+++ b/indice.html
@@ -70,8 +70,9 @@
         <p style="margin-bottom: 1rem;">
             Ingeniero civil/estructural australiano. Autónomo residente en España con disponibilidad de 
             incorporarse en proyectos u obras de corta o larga duración. Particularmente interesado en:<br>
-            > Gestión del proyecto para el desarroyo de los documentos de diseño ; planos, especificaciones etc. para las ofertas y diseño final;<br>
-            > Representante de consultante en reuniones de diseño, obra o project management;<br>
+            > Gestión del proyecto para el desarrollo de los documentos de diseño ; planos, especificaciones etc. 
+            para las ofertas y diseño final;<br>
+            > Representante de consultante en reuniones de diseño, obra o de la Junta Directiva;<br>
             > Evaluación técnica de reclamaciones para establecer responsabilidad, causa, 
             efecto y daños y mediación de conflictos.
             </p>
@@ -90,13 +91,13 @@
                     margin= "5px"
                     />
             </div>
-            <p style="margin-left: 5px;">Casi 40 años de experiencia como ingeniero civil y de estructuras. 
-                El experiencia cubre tanto edificación como puentes en los últimos años. Trabajado en Australia, 
+            <p style="margin-left: 5px;">Casi 40 años de experiencia como ingeniero civil y estructural. 
+                El experiencia cubre tanto edificación como puentes en los últimos años. Experiencia en Australia, 
                 Inglaterra y España.
             </p>
             <div class="container-fluid p-0" style="float:left">
                 <span class="cvheading">Profesión </span> 
-                <p>Ingeniero civil/estructuras.</p>
+                <p>Ingeniero civil/estructural.</p>
                 <span class="cvheading">Formación académica</span>
                 <p>BE (Civil) University of Melbourne, 1982.</p>
             </div>
@@ -133,9 +134,8 @@
     <div class="row">
         <span class="cvheading">Experiencia 2006-actual</span>
         <span class="link">Evaluación de reclamaciones de contratistas</span>
-            <p>Richard es el responsable de evaluar y defender varias reclamaciones de los contratistas 
-            contra Eptisa. Una reclamación relacionada con Mersey Gateway Project fue resuelta 
-            con éxito en la mediación y una reclamación sobre el N25 New Ross Bypass continúa.
+            <p>Responsable de evaluar y defender varias reclamaciones de los contratistas 
+            contra Eptisa.
             </p>
     </div>
     <div class="row">
@@ -143,14 +143,14 @@
         <p><b>Vice Jefe de Proyecto Landside Structures.</b> Jefe de Proyecto para Eptisa cubriendo el 
             diseño de los muros de contención, drenaje, y geotecnia para el proyecto entero 
             incluyendo el puente principal, y de la subestructura del viaducto de Astmoor & Bridgewater. 
-            El responsable para la supervisión de la producción y sumisión de los planos y 
+            Responsable para la supervisión de la producción y sumisión de los planos y 
             informes, incluyendo el control de calidad. Asistió a las reuniones semanales de diseño 
             y a las reuniones mensuales de la Junta Directiva.
         </p>
     </div>
     <div class="row">
         <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
-        <p><b>Jefe de Proyecto cheque CAT III.</b> El responsable de la supervisión 
+        <p><b>Jefe de Proyecto cheque CAT III.</b> Responsable de la supervisión 
         del chequeo independiente categoría 3 incluyendo asistencia en las reuniones de 
         coordinación del cliente. </p>
     </div>
@@ -158,7 +158,7 @@
         <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
         <p><b>Gestión de la producción de los planos constructivos y representante del diseño 
         en obra</b> para el New Europe Bridge, antes conocido como el Danube Bridge 2 o el 
-        Vidin-Calafat Bridge  (Bulgaria). El responsable para el desarrollo de 
+        Vidin-Calafat Bridge  (Bulgaria). Responsable para el desarrollo de 
         los planos de diseño a los planos de construcción. Incluido el Puente Principal 
         y sus viaductos, el viaducto del ferrocarril y el drenaje. También el 
         representante en obra del diseño.</p>
