commit sent to JR Typsa

--- a/empleo.html
+++ b/empleo.html
@@ -63,7 +63,7 @@
   </nav>
 <main style="padding-top:1vh">
 <div class="container ">
-<span class="cvheading">Empleo</span><br>
+<span class="cvheading" style="margin-left:1vmin">Empleo</span><br>
 <table class="table table-hover">
   <tbody>
     <tr>
