--- a/employment.html
+++ b/employment.html
@@ -57,7 +57,7 @@
   </nav>
 <main style="padding-top:1vh">
 <div class="container">
-<span class="cvheading">Employment Record</span>
+<span class="cvheading" style="margin-left:1vmin">Employment Record</span>
 <table class="table table-hover">
   <tbody>
     <tr>
