--- a/academic.html
+++ b/academic.html
@@ -52,9 +52,9 @@
     </div>
     <a class="nav-link" href="academica.html" role="button">
         <img id = "home"
-            src="static/bandera.png"
+            src="static/oz.png"
             alt="Flag"
-            width="25px"/>
+            width="35px"/>
         </a>
 </nav>
 <span style="margin-left: 2vh;" class="cvheading">Degree and Certificates</span>
