--- a/academica.html
+++ b/academica.html
@@ -57,7 +57,7 @@
           </ul>
         </div>
         <a class="nav-link" href="academic.html" role="button">
-          <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
+          <img id = "home" src="static/bandera.png" alt="Bandera" width="25px"/>
         </a>
         </nav>
         <span style="margin-left: 2vh;" class="cvheading">Grado y certificados</span>
