--- a/email.html
+++ b/email.html
@@ -47,9 +47,9 @@
         </div>
         <a class="nav-link" href="email_esp.html" role="button">
             <img id = "home"
-                src="static/bandera.png"
+                src="static/oz.png"
                 alt="Flag"
-                width="25px"/>
+                width="35px"/>
           </a>
     </nav>
 <link href="contact-form.css" rel="stylesheet">
