--- a/employment.html
+++ b/employment.html
@@ -52,7 +52,7 @@
         </ul>
       </div>
       <a class="nav-link" href="empleo.html" role="button">
-          <img id = "home" src="static/bandera.png" alt="Flag" width="25px"/>
+          <img id = "home" src="static/oz.png" alt="Flag" width="35px"/>
         </a>
   </nav>
 <main style="padding-top:1vh">
