--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
     </div>
     <a title="version en español" class="nav-link" href="indice.html" role="button">
         <img id = "home"
-            src="static/bandera.png"
+            src="static/oz.png"
             alt="Flag"
-            width="25px"
+            width="35px"
+            title="English"
             />
         </a>
 </nav>
