--- a/email_esp.html
+++ b/email_esp.html
@@ -46,7 +46,7 @@
             </ul>
         </div>
         <a class="nav-link" href="email.html" role="button">
-            <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
+            <img id = "home" src="static/bandera.png" alt="Bandera" width="25px"/>
           </a>
     </nav>
 <link href="contact-form.css" rel="stylesheet">
