--- a/empleo.html
+++ b/empleo.html
@@ -58,7 +58,7 @@
         </ul>
       </div>
       <a class="nav-link" href="employment.html" role="button">
-        <img id = "home" src="static/oz.png" alt="Bandera" width="35px"/>
+        <img id = "home" src="static/bandera.png" alt="Bandera" width="25px"/>
       </a>
   </nav>
 <main style="padding-top:1vh">
