--- a/experience.html
+++ b/experience.html
@@ -53,9 +53,9 @@
         </div>
         <a class="nav-link" href="experiencia.html" role="button">
             <img id = "home"
-                src="static/bandera.png"
+                src="static/oz.png"
                 alt="Flag"
-                width="25px"/>
+                width="35px"/>
         </a>
             
     </nav>
