--- a/indice.html
+++ b/indice.html
@@ -70,7 +70,7 @@
         <p style="margin-bottom: 1rem;">
             Ingeniero civil/estructural australiano. Autónomo residente en España con disponibilidad de 
             incorporarse en proyectos u obras de corta o larga duración. Particularmente interesado en:<br>
-            > Gestión del proyecto para el desarrollo de los documentos de diseño ; planos, especificaciones etc. 
+            > Gestión del proyecto para el desarrollo de los documentos de diseño ; planos, especificaciones, manuales etc. 
             para las ofertas y diseño final;<br>
             > Representante de consultante en reuniones de diseño, obra o de la Junta Directiva;<br>
             > Evaluación técnica de reclamaciones para establecer responsabilidad, causa, 
@@ -157,8 +157,7 @@
     <div class="row">
         <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
         <p><b>Gestión de la producción de los planos constructivos y representante del diseño 
-        en obra</b> para el New Europe Bridge, antes conocido como el Danube Bridge 2 o el 
-        Vidin-Calafat Bridge  (Bulgaria). Responsable para el desarrollo de 
+        en obra</b> para el New Europe Bridge (Vidin-Calafat Bridge, Bulgaria). Responsable para el desarrollo de 
         los planos de diseño a los planos de construcción. Incluido el Puente Principal 
         y sus viaductos, el viaducto del ferrocarril y el drenaje. También el 
         representante en obra del diseño.</p>
