--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
     <div class="row">
         <span class="cvheading" style="margin-top:0%">Introduction</span><br>
         <p style="margin-bottom: 1rem;">Australian freelance civil/structural engineer 
-            with extensive experience. Based in Spain with availability for either short or long-term assignments.  With particular interest in:<br>
-            > Project Management of tender and detailed design document preparation; drawings, specifications etc.;<br>
+            with extensive experience. Based in Spain with availability for either short or long-term assignments. 
+            With particular interest in:<br>
+            > Management of construction document preparation from design development, through detailed design to as-built phases
+            ; drawings, specifications, maintenance manuals etc.;<br>
             > Representation of consultant at design/site/project management meetings;<br>
             > Assessment and evaluation of claims to establish responsibility, 
             cause, effect and damage, to assist in mediation.
@@ -135,9 +137,8 @@
     <div class="row">
         <span class="cvheading">Experience 2006 to present</span>
                 <span class="link">Evaluation of contract claims</span>
-                <p>Richard is responsible for assessing and defending various claims brought by contractors against Eptisa, 
-                    to assist in the mediation process. A claim relating to the Mersey Gateway Project was successfully 
-                    resolved at mediation and a claim relating to the N25 New Ross Bypass tender is ongoing.
+                <p>Responsible for assessing and defending various claims brought by contractors against Eptisa, 
+                    to assist in the mediation process.
                 </p>
     </div>
     <div class="row">
@@ -145,14 +146,14 @@
                 <p><b>Deputy Project Manager Landside Structures.</b> 
                     Project manager for Eptisa  whose design responsibilities covered all retaining walls, 
                     drainage for the entire project including the Main Bridge, geotechnical design and 
-                    sub-structure design Astmoor & Bridgewater Viaduct. Richard was responsible for the 
+                    sub-structure design Astmoor & Bridgewater Viaduct. Responsible for the 
                     supervision of production and submission of drawings and reports, including quality control. 
-                    He attended weekly design coordination meetings as well as monthly DJV Board meetings.
+                    Attendance at weekly design coordination meetings as well as monthly DJV Board meetings.
                 </p>
     </div>
     <div class="row">
         <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
-                <p><b>Project Manager CAT III check including Barrow Crossing.</b> Richard was responsible for overseeing 
+                <p><b>Project Manager CAT III check including Barrow Crossing.</b> Responsible for overseeing 
                     the independent checking (category 3) and acceptance of structural drawings and geotechnical reports 
                     as well as attending client coordination meetings.
                 </p>
@@ -161,11 +162,9 @@
         <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
                 <p><b>Management of production of Working Drawings and also Design Site Representative</b> 
                     for the New Europe Bridge (Vidin-Calafat Bridge, Bulgaria). 
-                    Richard was responsible for developing 
-                    the design general arrangement drawings for the entire project into working drawings. 
+                    Responsible for developing the design general arrangement drawings for the entire project into working drawings. 
                     These included the river crossing and approach as well as the railway bridge and the drainage design for both structures. 
-                    He was also the Design Site Representative and attended monthly site design coordination meetings 
-                    between designers, client and checking engineers.
+                    Design Site Representative and attended monthly site design coordination meetings with designers, client and checking engineers.
                 </p>
     </div>
   </div>
