--- a/empleo.html
+++ b/empleo.html
@@ -77,7 +77,7 @@
       <td>jun 08- jun 13</td>
       <td><b>FCC Construccion SA</b><br>
         Responsable de la elaboración de los planos Working Drawings y Design Site Representative  
-        del puente Danube Bridge 2, Vidin- Calafat, Bulgaria. Valor de contrato €235m.
+        del puente New Europe Bridge (Vidin- Calafat, Bulgaria). Valor de contrato €235m.
           </td>
     </tr>
     <tr>
