--- a/employment.html
+++ b/employment.html
@@ -70,14 +70,14 @@
     <tr>
       <td>Jun 08- Jun 13</td>
       <td><b>FCC Construccion SA</b><br>
-          Responsible for producing the Working Drawings and Design Site Representative for the Danube
-          Bridge 2 Project (Bulgaria). Contract value €235m.
+          Responsible for producing the Working Drawings and Design Site Representative for the 
+          New Europe Bridge (Vidin-Calafat, Bulgaria). Contract value €235m.
           </td>
     </tr>
     <tr>
       <td>Apr 06- Jun 08</td>
       <td><b>Dragados SA</b><br>
-          Quality Control Technician Torre Bankia. Contract value €82m.
+          Quality Control Technician Torre Cepsa. Contract value €82m.
           </td>
     </tr>
     <tr>
