--- a/experience.html
+++ b/experience.html
@@ -81,7 +81,7 @@
         <hr>
         <span class="cvheading">FCC CONSTRUCCIÓN</span><br>
         <p style="text-align: justify;">In charge of production of Working Drawings and also Design Site Representative for the <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a>, 
-        (Vidin-Calafat Bridge, Bulgaria). Contract value 235M€.</p>
+        (Vidin-Calafat, Bulgaria). Contract value 235M€.</p>
             <figure>
                 <img src="photos/vidin.jpg" alt="Mersey Gateway" style="width:90%">
                 <figcaption>New Europe Bridge (Bulgaria)</figcaption>
