--- a/experiencia.html
+++ b/experiencia.html
@@ -84,7 +84,7 @@
         <span class="cvheading">FCC CONSTRUCCIÓN</span><br>
         <p style="text-align: justify">Encargado de la producción de todos los planos de construcción y representante del 
             diseño en los reuniones mensuales de obra para el <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a> 
-            (Vidin-Calafat Bridge, Bulgaria). Valor de contrato 235M€.</p>
+            (Vidin-Calafat, Bulgaria). Valor de contrato 235M€.</p>
             <figure>
                 <img src="photos/vidin.jpg" alt="Mersey Gateway" style="width:90%">
                 <figcaption>New Europe Bridge (Bulgaria)</figcaption>
@@ -94,7 +94,7 @@
             Valor de contrato €82M.</p>
             <figure>
                 <img src="photos/repsol.jpg" alt="Mersey Gateway" style="width:40%">
-                <figcaption>Torre Bankia (Madrid)</figcaption>
+                <figcaption>Torre Cepsa (Madrid)</figcaption>
             </figure>
             <p>Responsable para el control de la recepción de los materiales (hormigon, acero etc.) y el control de la ejecución.</p>
         <span class="cvheading">OPROLER MADRID SA</span><br>
