--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
     <hr>
     <div class="row">
         <span class="cvheading">Experience 2006 to present</span>
-                <span class="link">Evaluation of contract claims</span>
+                <span><b>Evaluation of contract claims</b></span>
                 <p>Responsible for assessing and defending various claims brought by contractors against Eptisa, 
                     to assist in the mediation process.
                 </p>
     </div>
     <div class="row">
-        <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project</a><br>
+        <span><a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a></span><br>
                 <p><b>Deputy Project Manager Landside Structures.</b> 
                     Project manager for Eptisa  whose design responsibilities covered all retaining walls, 
                     drainage for the entire project including the Main Bridge, geotechnical design and 
@@ -152,16 +152,16 @@
                 </p>
     </div>
     <div class="row">
-        <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
+        <span><a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass:</a></span><br>
                 <p><b>Project Manager CAT III check including Barrow Crossing.</b> Responsible for overseeing 
                     the independent checking (category 3) and acceptance of structural drawings and geotechnical reports 
                     as well as attending client coordination meetings.
                 </p>
     </div>
     <div class="row">
-        <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
+        <span><a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge:</a></span><br>
                 <p><b>Management of production of Working Drawings and also Design Site Representative</b> 
-                    for the New Europe Bridge (Vidin-Calafat Bridge, Bulgaria). 
+                    for the New Europe Bridge (Vidin-Calafat, Bulgaria). 
                     Responsible for developing the design general arrangement drawings for the entire project into working drawings. 
                     These included the river crossing and approach as well as the railway bridge and the drainage design for both structures. 
                     Design Site Representative and attended monthly site design coordination meetings with designers, client and checking engineers.
