--- a/indice.html
+++ b/indice.html
@@ -109,7 +109,7 @@
                 > Diseño estructural en edificación utilizando hormigón armado, acero, madera y estructuras de fábrica.<br>
                 > Diseño de pavimiento y drenaje en urbanizaciones.<br>
                 > Estimación de cuantías, inspecciones y evaluación de edificios, informes, declaración de método y especificaciones etc.<br>
-                > Evaluación técnica de reclamaciones para establecer responsabilidad, causa, efecto y daños.
+                > Evaluación técnica de reclamaciones para establecer responsabilidad, causa, efecto y daños y mediación de conflictos.
             </p>   
       </div>
       <div class="col-sm">
@@ -133,13 +133,13 @@
     <hr>
     <div class="row">
         <span class="cvheading">Experiencia 2006-actual</span>
-        <span class="link">Evaluación de reclamaciones de contratistas</span>
+        <span class="link"><b>Evaluación de reclamaciones de contratistas</b></span>
             <p>Responsable de evaluar y defender varias reclamaciones de los contratistas 
             contra Eptisa.
             </p>
     </div>
     <div class="row">
-        <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a><br>
+        <span><a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a></span><br>
         <p><b>Vice Jefe de Proyecto Landside Structures.</b> Jefe de Proyecto para Eptisa cubriendo el 
             diseño de los muros de contención, drenaje, y geotecnia para el proyecto entero 
             incluyendo el puente principal, y de la subestructura del viaducto de Astmoor & Bridgewater. 
@@ -149,15 +149,15 @@
         </p>
     </div>
     <div class="row">
-        <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
+        <span><a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass:</a></span><br>
         <p><b>Jefe de Proyecto cheque CAT III.</b> Responsable de la supervisión 
         del chequeo independiente categoría 3 incluyendo asistencia en las reuniones de 
         coordinación del cliente. </p>
     </div>
     <div class="row">
-        <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
+        <span><a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge:</a></span><br>
         <p><b>Gestión de la producción de los planos constructivos y representante del diseño 
-        en obra</b> para el New Europe Bridge (Vidin-Calafat Bridge, Bulgaria). Responsable para el desarrollo de 
+        en obra</b> para el New Europe Bridge (Vidin-Calafat, Bulgaria). Responsable para el desarrollo de 
         los planos de diseño a los planos de construcción. Incluido el Puente Principal 
         y sus viaductos, el viaducto del ferrocarril y el drenaje. También el 
         representante en obra del diseño.</p>
