--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 > Structural design of building projects in reinforced concrete, structural steelwork, timber, and masonry.<br>
                 > Civil Engineering design of paved areas  and drainage in housing developments.<br>
                 > Quantities estimating, structural surveys and appraisals of existing buildings, reports,  method statements, specifications etc.<br>
-                > Technical evaluation of civil engineering claims.
+                > Contractual, technical and financial evaluation of construction claims.
             </p>   
       </div>
       <div class="col-sm">
@@ -136,9 +136,10 @@
     <hr>
     <div class="row">
         <span class="cvheading">Experience 2006 to present</span>
-                <span><b>Evaluation of contract claims</b></span>
-                <p>Responsible for assessing and defending various claims brought by contractors against Eptisa, 
-                    to assist in the mediation process.
+                <span><b>Evaluation of contractor claims:</b></span>
+                <p> Assessment of the contractual, technical and financial position of construction claims
+                    brought against Eptisa including evaluation of experts' reports and insurance.
+                    Attendance at mediation to assist in the negotiated resolution of disputes.
                 </p>
     </div>
     <div class="row">
